[metadata]
# replace with your username:
name = Adviser-Rocksdb
version = 0.0.1
author = Example Author
author_email = author@example.com
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BaronStack/Rocksdb-Adviser.git
project_urls =
    Bug Tracker = https://github.com/BaronStack/Rocksdb-Adviser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
